--- a/src/Navigation_bar.css
+++ b/src/Navigation_bar.css
@@ -176,7 +176,8 @@
 /* User Dropdown Styles */
 .user-dropdown-container {
   position: relative;
-  margin-left: 1rem;
+  margin-left: 0.5rem;
+  margin-right: 1rem;
 }
 
 .user-icon-wrapper {
